Abort LDAP user to DN mapping on network error

XMLWordPrintableJSON

    • Major Change
    • ALL
    • v4.4
    • Security 2020-04-06, Security 2020-04-20, Security 2020-05-04
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      MongoDB evaluates a sequence if rules to resolve an authentication name into an LDAP DN. It may use regex rules or LDAP queries. If rules fail to match or evaluate the next rule is tried. However, failure to evaluate an LDAP rule doesn't indicate success or failure, and should terminate evaluation of the whole chain.

            Assignee:
            Sara Golemon (Inactive)
            Reporter:
            Spencer Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: