SERVER-44786 Abort userName to DN mapping on operation failure

GitOrigin-RevId: b2afee5b58dac0633c5292a0f130b2418b8e66e1